plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.16'
}

group 'tia.test'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    //version '2020.2'
    version '2019.2.4'
    type 'IC'
    //type 'IU'
    downloadSources = true
    //plugins = ['properties', 'java', 'Spring']
    plugins = ['properties', 'java']

    runIde{
        jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED'
    }
}


patchPluginXml {
    //sinceBuild 'IC-202'
    sinceBuild 'IC-192'
    untilBuild null
    /*changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>
      """*/
}